# imexpress

./: .gitmodules  CMakeLists.txt  README.md
include/combination/: combination.h
include/common/: buf.h  buf_rc.h  buf_sd.h  common.h  copy.h  def.h  dim.h  eigen_config.h  environment.h.in  function.h  functor_foreach.h  functor_m2vdim.h  functor_m2vnum.h  gslvec.h  init.h  math_const.h  namespace.h  template_foreach.h  template_m2vnum_2d.h  template_m2vnum_4d.h  test.h  type.h  util.h
include/complex/: complex.h
include/dae/: def.h  dense_ode.h  diag_ode.h  error.h  func_ode.h  function.h  krylov_ode.h  linsol.h  ode.h  sunmat.h  sunmatrix.h  sunvec.h
include/fft/: dct.h  dct2.h  def.h  dst.h  dst2.h  fft.h  fft2.h  idct.h  idct2.h  idst.h  idst2.h  ifft.h  ifft2.h  type.h
include/fft/fftw/: plan.h  plan_cache.h  plan_double.h  plan_float.h  plan_single.h
include/fmin/: fmin.h  mdfmin.h  mfmin.h
include/froot/: dfroot.h  froot.h  mdfroot.h  mfroot.h
include/histogram/: hist.h  hist2.h  hist2pdf.h  histpdf.h
include/integral/: cquad.h  fixed.h  function.h  glfixed.h  miser.h  monte.h  qag.h  qagi.h  qagp.h  qags.h  qawc.h  qawf.h  qawo.h  qaws.h  qng.h  type.h  vegas.h
include/math/: constant.h  elementary.h  inf_nan.h
include/multiset/: multiset.h
include/poly/: cubic.h  divided_difference.h  evaluation.h  general.h  quadratic.h
include/polynomial/: cubic.h  divided_difference.h  evaluation.h  general.h  quadratic.h
include/rand/: beta.h  bi_gauss.h  bi_normal.h  binomial.h  cauchy.h  chisq.h  choose.h  dirichlet.h  discrete.h  exp.h  expow.h  f.h  flat.h  gamma.h  gauss.h  gauss_tail.h  geometric.h  gumbel1.h  gumbel2.h  hyper_geometric.h  landau.h  laplace.h  levy.h  levy_skew.h  lgnorm.h  log.h  logistic.h  mul_gauss.h  mul_nomial.h  mul_normal.h  neg_binomial.h  normal.h  normal_tail.h  pareto.h  pascal.h  poisson.h  qrand.h  qrng.h  rand.h  rayleigh.h  (+7 more)
include/randist/: beta.h  bi_gauss.h  binomial.h  cauchy.h  chisq.h  discrete.h  exp.h  expow.h  f.h  flat.h  gamma.h  gauss.h  gauss_tail.h  geometric.h  gumbel1.h  gumbel2.h  hyper_geometric.h  landau.h  laplace.h  lgnorm.h  log.h  logistic.h  mul_gauss.h  mul_nomial.h  neg_binomial.h  pareto.h  pascal.h  poisson.h  rayleigh.h  rayleigh_tail.h  t.h  weibull.h
include/rstat/: quantile.h  rstat.h
include/siman/: siman.h
include/sort/: largest.h  smallest.h  sort.h  sort_index.h
include/special/: airy.h  airy_zero.h  clausen.h  coulomb_wave.h  cylindrical_bessel.h  dawson.h  debye.h  dilog.h  elliptic_integral.h  elliptic_jacobi.h  exp_integral.h  hydrogenicR.h  modified_cylindrical_bessel.h  modified_spherical_bessel.h  power.h  psi.h  spherical_bessel.h  synchrotron.h  transport.h  trigonometry.h  wigner_symbol.h  zeta.h
include/stats/: autocorr.h  corrcoef.h  cov.h  kurtosis.h  mean.h  median.h  quantile.h  skewness.h  std.h  tss.h  var.h
misc/coding_style/: c_format.sh
source/common/: init.cpp  test.cpp
source/dae/: error.cpp  sunmat.cpp  sunmatrix.cpp  sunvec.cpp
source/fft/fftw/: plan.cpp
source/fmin/: fmin.cpp  mdfmin.cpp  mfmin.cpp
source/froot/: dfroot.cpp  froot.cpp  mdfroot.cpp  mfroot.cpp
source/rand/: qrng.cpp  rng.cpp
test/: CMakeLists.txt  test_imexpress.cpp  test_util.h
test/case/: dummy.cpp  test_call.cpp  test_comb.cpp  test_complex.cpp  test_dct.cpp  test_dct2.cpp  test_dst.cpp  test_dst2.cpp  test_ellint.cpp  test_expint.cpp  test_fft.cpp  test_fft2.cpp  test_fft_plan_double.cpp  test_fft_plan_float.cpp  test_fft_plan_single.cpp  test_fmin.cpp  test_froot.cpp  test_functor.cpp  test_histogram.cpp  test_ifft.cpp  test_ifft2.cpp  test_integral.cpp  test_integral_qng.cpp  test_linsol.cpp  test_math_const.cpp  test_math_constant.cpp  test_math_elementary.cpp  test_math_inf_nan.cpp  test_multiset.cpp  test_poly_cubic.cpp  test_poly_dd.cpp  test_poly_eval.cpp  test_poly_general.cpp  test_poly_quad.cpp  test_power.cpp  test_psi.cpp  test_quantile.cpp  test_randist.cpp  test_rng.cpp  test_rstat.cpp  (+16 more)
